# project-mai-tai

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  pyproject.toml
analysis/: atr_flip.py  exit_ladder_rescore.py  overnight_bar_parity.py  overnight_entry_audit.py  path3_backtest.py  replay_study.py  trade_ledger.py  weekly_ledger.py
docs/: 30s-bar-architecture-proposal.md  30s-entry-research-pivot-2026-04-13.md  30s-probe-reclaim-recommendation-review-2026-04-03.md  Mai-Tai-30s-Reclaim-Guide-Plain-English-2026-04-13.docx  README.md  TradingView-VPS-Session-Refresh-Runbook-2026-04-17.docx  active-market-verification-todo.md  agent-deploy-runbook.md  architecture.md  atr-30s-and-cw-parity-2026-07-21.md  atr-confirmed-window-forward-test.md  atr-proximity-entry-rnd.md  backtest-engine-design.md  backtest-replay-engine-design.md  bar-build-invariants.md  bot-flow-30s-core-tos.html  catalyst-ai-shadow-plan-2026-04-14.md  chat-summary-2026-03-29.md  cw-v2-intrabar-rules-design.md  deployment-operating-model.md  dual-broker-v2-design.md  false-flat-reconcile-design.md  fleet-health-validation-design.md  github-actions-deploy.md  implementation-roadmap.md  intrabar-hold-confirmation-design.md  live-broker-comparison-sheet-2026-04-01.md  live-market-restart-runbook.md  macd30-pretrigger-probe-detailed-summary-2026-04-03.docx  macd30-pretrigger-reclaim-detailed-summary-2026-04-03.docx  macd_30s_post_scanner_rule_map_2026-04-01-implemented-round-2.tsv  macd_30s_post_scanner_rule_map_2026-04-01-implemented-round-2.xlsx  macd_30s_post_scanner_rule_map_2026-04-01-implemented-round-3.tsv  macd_30s_post_scanner_rule_map_2026-04-01-implemented-round-3.xlsx  macd_30s_post_scanner_rule_map_2026-04-01-updated-after-entry-filter-removal.tsv  macd_30s_post_scanner_rule_map_2026-04-01-updated-after-entry-filter-removal.xlsx  macd_30s_post_scanner_rule_map_2026-04-01.tsv  macd_30s_post_scanner_rule_map_2026-04-01.xlsx  mai-tai-30s-reclaim-plain-english-2026-04-13.md  market-capture-design.md  (+88 more)
ops/: README.md
reports/: atr_intrabar_trades.csv
scripts/: analyze_schwab_event_latency.py  atr_fill_lifetime_measure.py  atr_intrabar_run.py  atr_naked_report.py  atr_naked_run.py  backfill_polygon_trades.py  backtest_30s.py  backtest_validate_trades.py  broker_ab_report.py  check_bar_build_runtime.py  compare_tv_csv.py  (+53 more)
(+431 files in other folders)
