[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "project-mai-tai"
version = "0.1.0"
description = "Production-ready parallel rebuild of the momentum trading platform"
readme = "README.md"
requires-python = ">=3.12"
authors = [
  { name = "krshk30", email = "krshk30@gmail.com" }
]
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn[standard]>=0.30,<1.0",
  "pydantic>=2.8,<3.0",
  "pydantic-settings>=2.4,<3.0",
  "sqlalchemy>=2.0,<3.0",
  "alembic>=1.13,<2.0",
  "psycopg[binary]>=3.2,<4.0",
  "redis>=5.0,<6.0",
  "massive>=2.0,<3.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27,<1.0",
  "pre-commit>=3.8,<5.0",
  "pytest>=8.3,<9.0",
  "pytest-asyncio>=0.24,<1.0",
  "ruff>=0.6,<1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint.per-file-ignores]
"sql/migrations/env.py" = ["E402"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
mai-tai-control = "project_mai_tai.services.control_plane:run"
mai-tai-market-data = "project_mai_tai.services.market_data_gateway:run"
mai-tai-strategy = "project_mai_tai.services.strategy_engine:run"
mai-tai-oms = "project_mai_tai.services.oms_risk:run"
mai-tai-reconciler = "project_mai_tai.services.reconciler:run"
mai-tai-seed-runtime = "project_mai_tai.runtime_seed:run"
